rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__ref-adjacent__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Ref Target
  class: Folder
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
  children: []
- referent: referent-1
  name: Value
  class: ObjectValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value: referent-0
  children: []
